--- a/package.json
+++ b/package.json
@@ -10,29 +10,63 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.0.0",
-    "@angular/common": "^15.0.0",
-    "@angular/compiler": "^15.0.0",
-    "@angular/core": "^15.0.0",
-    "@angular/forms": "^15.0.0",
-    "@angular/platform-browser": "^15.0.0",
-    "@angular/platform-browser-dynamic": "^15.0.0",
-    "@angular/router": "^15.0.0",
+    "@angular/animations": "^15.2.3",
+    "@angular/cli": "^15.2.3",
+    "@angular/common": "^15.2.3",
+    "@angular/compiler": "^15.2.3",
+    "@angular/core": "^15.2.3",
+    "@angular/forms": "^15.2.3",
+    "@angular/platform-browser": "^15.2.3",
+    "@angular/platform-browser-dynamic": "^15.2.3",
+    "@angular/router": "^15.2.3",
+    "@ng-bootstrap/ng-bootstrap": "^14.0.1",
+    "@popperjs/core": "^2.11.7",
+    "@syncfusion/ej2-angular-base": "^21.1.35",
+    "@syncfusion/ej2-angular-buttons": "^21.1.35",
+    "@syncfusion/ej2-angular-calendars": "^21.1.35",
+    "@syncfusion/ej2-angular-charts": "^21.1.35",
+    "@syncfusion/ej2-angular-dropdowns": "^21.1.35",
+    "@syncfusion/ej2-angular-grids": "^21.1.35",
+    "@syncfusion/ej2-angular-inputs": "^21.1.35",
+    "@syncfusion/ej2-angular-navigations": "^21.1.35",
+    "@syncfusion/ej2-angular-notifications": "^21.1.35",
+    "@syncfusion/ej2-angular-popups": "^21.1.35",
+    "@syncfusion/ej2-angular-richtexteditor": "^21.1.35",
+    "@syncfusion/ej2-base": "^21.1.35",
+    "@syncfusion/ej2-buttons": "^21.1.35",
+    "@syncfusion/ej2-inputs": "^21.1.35",
+    "@syncfusion/ej2-lists": "^21.1.35",
+    "@syncfusion/ej2-navigations": "^21.1.35",
+    "@syncfusion/ej2-popups": "^21.1.35",
+    "@syncfusion/ej2-splitbuttons": "^21.1.35",
+    "bootstrap": "^5.2.3",
+    "flag-icons": "^6.6.6",
+    "font-awesome": "^4.7.0",
+    "install-peers": "^1.0.4",
+    "jquery": "^3.6.1",
+    "material-icons": "^1.12.2",
+    "ngx-pagination": "^6.0.3",
+    "ngx-spinner": "^15.0.1",
+    "ngx-toastr": "^16.1.0",
+    "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.0.0",
-    "@angular/cli": "~15.0.0",
-    "@angular/compiler-cli": "^15.0.0",
+    "@angular-devkit/build-angular": "^15.2.3",
+    "@angular/compiler-cli": "^15.2.3",
+    "@angular/localize": "^15.2.3",
     "@types/jasmine": "~4.3.0",
+    "autoprefixer": "^10.4.14",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7",
     "typescript": "~4.8.2"
   }
 }
